--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=KTTKPM_springboot_jwt
+spring.datasource.username=sa
+spring.datasource.password=sapassword
+spring.jpa.hibernate.ddl-auto=update
+server.port=7070
+server.servlet.context-path=
